# mktd

./: README.md  compose.develop.yaml  compose.production.yaml  pyproject.toml
applications/database/: Dockerfile
applications/dynamodb/: Dockerfile
applications/webapi/: Dockerfile  main.py
libraries/database/: pyproject.toml
libraries/database/database/models/: accounts.py  base.py  documents.py  faqs.py  groups.py  tags.py  tenants.py  tickets.py
libraries/gmk-ai/: pyproject.toml
libraries/gmk-ai/gmk-ai/: main.py
libraries/gmk_ai/: pyproject.toml
