[project]
name = "rasa-sample"
requires-python = ">=3.12,<4.0"

[tool.poetry]
package-mode=false

[tool.poetry.dependencies]

[tool.poetry.group.webapi.dependencies]
fastapi = "^0.115.12"
database = {path = "libraries/database", develop = true}
gmk-ai = {path = "libraries/gmk_ai", develop = true}

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
